2002-04-27  Laurent Oudot  <oudot.laurent@wanadoo.fr>

	* plugins/simple/ruleset/simple.rules:
	Added include directive for specific rules in cisco.rules and
	zyxel.rules.
	The include directive is very cool because it will help at maintaining
	the rules (if you don't need for example zyxel rules, you can put a
	simple # character before the include directive). 
	
	* plugins/simple/ruleset/cisco.rules:
	New file dedicated to cisco rules.
	
	* plugins/simple/ruleset/zyxel.rules:
	New file dedicated to zyxel rules.

2002-04-27  Yoann Vandoorselaere  <yoann@mandrakesoft.com>

	* src/file-server.c (file_server_monitor_file): 
	use calloc() to allocate the monitor_fd_t object.
	This fix a possible unitialized read.

	* plugins/simple/simple.c (parse_include): 
	return -2 on success.
	
	(parse_rule): -1 mean error, other value < 0 just
	mean to stop the processing for this line.

2002-04-27  Laurent Oudot  <oudot.laurent@wanadoo.fr>

	* plugins/simple/ruleset/simple.rules :
	Added ZyXEL routers and firewalls support.
	It will help at dealing with ZyXEL network equipments used with 
	security filtering features.

2002-04-26  Laurent Oudot  <oudot.laurent@wanadoo.fr>

	* plugins/simple/ruleset/simple.rules :
	Added a contrib from Arnaud Guignard <arnaud.guignard@free.fr> 
	(plugin regex rules) and me (for the cisco part) that aims at
	dealing with cisco security routers alerts.
	It's just a beginning that will be improved in the future.

2002-04-26  Yoann Vandoorselaere  <yoann@mandrakesoft.com>

	* plugins/simple/simple.c (parse_ruleset): 
	strip out \n.
	
	(parse_rule): handle include rule.

	(parse_include): new function, parse include rule.
	If the path is not absolute, then we append the current
	rulesetdir to this filename.

2002-04-25  Yoann Vandoorselaere  <yoann@mandrakesoft.com>

	* src/log-common.c (format_syslog_header): 
	revert 2002-04-24, which was not needed (sscanf don't need
	precision).

2002-04-24  Yoann Vandoorselaere  <yoann@mandrakesoft.com>
