@@ -1,3 +1,15 @@
+2002-04-27  Yoann Vandoorselaere  <yoann@mandrakesoft.com>
+
+	* plugins/simple/simple.c: 
+	(parse_ruleset): 
+	make rulesnum global, this is because of the way we parse include.
+
+	(filter_string): fix off by one error resulting in trailing whitespace
+	not being removed.
+
+	(set_simple_ruleset): move the printf telling number of rules loaded
+	here, so that we don't get duplicate printf() for each included file.
+
 2002-04-27  Laurent Oudot  <oudot.laurent@wanadoo.fr>
 
 	* plugins/simple/ruleset/simple.rules:
